Should allow for pasrsing stuff now too.

--- a/.gitignore
+++ b/.gitignore
@@ -51,10 +51,12 @@ Doc/venv/
 Doc/.venv/
 Doc/env/
 Doc/.env/
+ResultsParser/env
 Include/pydtrace_probes.h
 Lib/distutils/command/*.pdb
 Lib/lib2to3/*.pickle
 Lib/test/data/*
+Lib/site-packages
 !Lib/test/data/README
 /Makefile
 /Makefile.pre
